# ExileBot2

./: .clang-format  .gitignore  CMakeLists.txt  build.bat
res/: Resource.qrc
res/Data/: ActiveSkills.json  ArmourTypes.json  BackendErrors.json  BuffDefinitions.json  ComponentAttributeRequirements.json  Inventories.json  ItemCompenentNames.json  WeaponTypes.json
scripts/: script.js
src/: Account.cpp  Account.h  AccountModel.cpp  AccountModel.h  Character.h  ExileClient.cpp  ExileClient.h  ExileGame.cpp  ExileGame.h  ExileSocket.cpp  ExileSocket.h  Global.cpp  Global.h  Helper.cpp  Helper.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/AStar/: astar.cpp  astar.h  blockallocator.cpp  blockallocator.h
src/Object/: AbstractObject.cpp  AbstractObject.h  GameObject.cpp  GameObject.h  ItemObject.cpp  ItemObject.h
